widget_derive/tests/ui/combination_fail.stderr
error: There is not `#[proxy]` attr specified, required by CombinationWidget
 --> $DIR/combination_fail.rs:4:8
  |
4 | struct A;
  |        ^

error: Too many `#[proxy]` attr specified, need only one
 --> $DIR/combination_fail.rs:7:8
  |
7 | struct B {
  |        ^
